# novus

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/benchmarks/: baseline_snapshot.json  category_thresholds.json
.github/workflows/: ci.yml
configs/: benchmark_cases.json  novus.example.toml
docker/: Dockerfile
docs/: ONBOARDING.md  REVIEW_REPORT.md  competition-analysis.md  github-competitor-analysis.md  implementation-status.md  nextgen-improvement-roadmap.md  ui-ux-competitive-analysis.md
examples/: basic_usage.py  engram_example.py  world_model_example.py
scripts/: run_readiness.sh
src/novus/: __init__.py
src/novus/a2a/: __init__.py
src/novus/api/: server.py
src/novus/benchmark/: __init__.py  trends.py
src/novus/cli/: __init__.py  __main__.py  main.py
src/novus/competition/: __init__.py
src/novus/composition/: __init__.py
src/novus/core/: agent.py  models.py
src/novus/eval/: __init__.py
src/novus/execution/: environment.py
src/novus/guardrails/: __init__.py
src/novus/human_in_loop/: __init__.py
src/novus/knowledge/: __init__.py
src/novus/llm/: __init__.py
src/novus/mcp/: __init__.py
src/novus/memory/: __init__.py  engram.py  unified.py
src/novus/monitoring/: __init__.py  metrics.py
src/novus/runtime/: __init__.py  artifacts.py  background.py  context.py  exporter.py  interrupts.py  loop.py  manifest.py  middleware.py  policy.py  replay.py  router.py  state.py  subagents.py  tools.py  trace_grade.py  verifier.py
src/novus/streaming/: __init__.py
src/novus/swarm/: orchestrator.py
src/novus/tools/: browser.py
src/novus/validation/: __init__.py
src/novus/world_model/: engine.py
tests/: conftest.py  test_comprehensive.py  test_core.py  test_runtime_nextgen.py
web/: index.html  package.json
web/src/: App.tsx
web/src/components/: Layout.tsx
web/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Dialog.tsx  ProgressBar.tsx  Slider.tsx  Tabs.tsx  Toggle.tsx
web/src/hooks/: useWebSocket.ts
web/src/pages/: Agents.tsx  BackgroundRuns.tsx  Chat.tsx  Dashboard.tsx  Evaluations.tsx  Guardrails.tsx  Memory.tsx  RunHistory.tsx  Settings.tsx  Tasks.tsx  WorldModel.tsx
web/src/types/: index.ts
web/src/utils/: api.ts
